--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background-color: #41444b;
+    background-color: #EFEFEF;
 }
 
 *,
@@ -29,7 +29,7 @@ ul {
 .title{
 	text-align: center;
 	margin: 3rem 0 1rem 0;
-	color: #fff;
+	color: #41444b;
 }
 
 .todo__form {
