--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background-color: #EFEFEF;
+    background-color: #efefef;
 }
 
 *,
@@ -18,18 +18,18 @@ li {
 ul {
     padding: 0;
 }
-.container{
-	margin: 0 auto;
-	padding: 2rem;
-	max-width: 95%;
+.container {
+    margin: 0 auto;
+    padding: 2rem;
+    max-width: 95%;
     display: flex;
-	flex-direction: column;
+    flex-direction: column;
     justify-content: center;
 }
-.title{
-	text-align: center;
-	margin: 3rem 0 1rem 0;
-	color: #41444b;
+.title {
+    text-align: center;
+    margin: 3rem 0 1rem 0;
+    color: #41444b;
 }
 
 .todo__form {
@@ -45,7 +45,7 @@ ul {
     min-height: 50px;
     max-width: 150px;
     padding: 0 1rem;
-    color: #fff;
+    color: #41444b;
     font-size: 15px;
     border: 1px solid #5e4dcd;
     border-radius: 6px 0 0 6px;
@@ -56,7 +56,7 @@ ul {
     padding: 0.5em 1em;
     border: none;
     border-radius: 0 6px 6px 0;
-    color: #000;
+    color: #41444b;
     font-size: 15px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
@@ -66,7 +66,6 @@ ul {
 .btn__delete {
     background-color: #d57e7e;
     border-radius: 6px;
-
 }
 .btn__delete:hover {
     background-color: #c37b89;
@@ -85,4 +84,86 @@ ul {
 .todo__input:focus-visible {
     border-color: #3898ec;
     outline: none;
+}
+
+.todo__list{
+	margin: 1rem auto;
+
+}
+
+.message {
+	font-size: 1.7rem;
+	text-align: center;
+}
+.todo {
+    display: flex;
+    align-items: center;
+	margin: 1rem auto;
+}
+
+.cont {
+    display: flex;
+    align-items: center;
+    transform: scale(1);
+}
+
+input[type="checkbox"] {
+    height: 2rem;
+    width: 2rem;
+    margin: 5px;
+    display: inline-block;
+    appearance: none;
+    position: relative;
+    background-color: #41444b;
+    border-radius: 15%;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+input[type="checkbox"]::after {
+    content: "";
+    display: block;
+    height: 0.9rem;
+    width: 0.4rem;
+    border-bottom: 0.31rem solid #a0ffe7;
+    border-right: 0.31rem solid #a0ffe7;
+    opacity: 0;
+    transform: rotate(45deg) translate(-50%, -50%);
+    position: absolute;
+    top: 45%;
+    left: 21%;
+    transition: 0.25s ease;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    display: block;
+    height: 0;
+    width: 0;
+    background-color: #00c896;
+    border-radius: 50%;
+    opacity: 0.5;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transition: 0.3s ease;
+}
+
+input[type="checkbox"]:checked::before {
+    height: 130%;
+    width: 130%;
+    opacity: 100%;
+}
+
+input[type="checkbox"]:checked::after {
+    opacity: 100%;
+}
+
+span {
+    font-size: 2rem;
+}
+
+.label__todo{
+	font-size: 2rem;
 }
