--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background-color: #BAFFB4;
+    background-color: #baffb4;
 }
 
 *,
@@ -28,53 +28,51 @@ ul {
 }
 .word-waves span {
     position: absolute;
-    color: #F5F7B2;
+    color: #f5f7b2;
     font-size: 5rem;
     transform: translate(-50%, -50%);
-    
 }
 
-.word-waves{
+.word-waves {
     text-align: center;
 }
 .word-waves span:nth-child(1) {
-
     color: transparent;
-    -webkit-text-stroke: 0.3px #0E185F;
+    -webkit-text-stroke: 0.3px #0e185f;
 }
 .word-waves span:nth-child(2) {
     color: rgb(128, 198, 255);
-    -webkit-text-stroke: 1px #31C6D4;
+    -webkit-text-stroke: 1px #31c6d4;
     animation: animation 3s ease-in-out infinite;
 }
 @keyframes animation {
     0%,
     100% {
-    clip-path: polygon(
-        0% 45%,
-        15% 44%,
-        32% 50%,
-        54% 60%,
-        70% 61%,
-        84% 59%,
-        100% 52%,
-        100% 100%,
-        0% 100%
-    );
+        clip-path: polygon(
+            0% 45%,
+            15% 44%,
+            32% 50%,
+            54% 60%,
+            70% 61%,
+            84% 59%,
+            100% 52%,
+            100% 100%,
+            0% 100%
+        );
     }
 
     50% {
-    clip-path: polygon(
-        0% 60%,
-        16% 65%,
-        34% 66%,
-        51% 62%,
-        67% 50%,
-        84% 45%,
-        100% 46%,
-        100% 100%,
-        0% 100%
-    );
+        clip-path: polygon(
+            0% 60%,
+            16% 65%,
+            34% 66%,
+            51% 62%,
+            67% 50%,
+            84% 45%,
+            100% 46%,
+            100% 100%,
+            0% 100%
+        );
     }
 }
 
@@ -91,7 +89,7 @@ ul {
     min-height: 50px;
     max-width: 150px;
     padding: 0 1rem;
-    color: #1E3163;
+    color: #1e3163;
     font-size: 15px;
     border: 1px solid #5e4dcd;
     border-radius: 6px 0 0 6px;
@@ -114,7 +112,7 @@ ul {
     border-radius: 6px;
 }
 .btn__delete:hover {
-    background-color: #FF4848;
+    background-color: #ff4848;
 }
 
 .btn__add {
@@ -132,19 +130,18 @@ ul {
     outline: none;
 }
 
-.todo__list{
-	margin: 1rem auto;
-
+.todo__list {
+    margin: 1rem auto;
 }
 
 .message {
-	font-size: 1.7rem;
-	text-align: center;
+    font-size: 1.7rem;
+    text-align: center;
 }
 .todo {
     display: flex;
     align-items: center;
-	margin: 1rem auto;
+    margin: 1rem auto;
 }
 
 .cont {
@@ -210,6 +207,20 @@ span {
     font-size: 2rem;
 }
 
-.label__todo{
-	font-size: 2rem;
+.label__todo {
+    font-size: 2rem;
+}
+
+.gif__container {
+    text-align: center;
+
+}
+.a {
+    width: 95%;
+}
+
+@media (min-width: 768px) {
+    .a{
+        width: 80rem;
+    }
 }
